[gd_scene load_steps=3 format=3 uid="uid://dq0vf6xluafbw"]

[ext_resource type="Script" path="res://Scenes/GUI/video_setting.gd" id="1_minc0"]
[ext_resource type="Theme" uid="uid://dyv68n2h7j1yp" path="res://MainTheme.tres" id="1_y4bkg"]

[node name="VideoSetting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_minc0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.996078, 0.760784, 0.94902, 1)

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullScreenMode" type="CheckBox" parent="ButtonContainer"]
layout_mode = 2
text = "Полный Экран
"

[node name="VSyncMode" type="CheckBox" parent="ButtonContainer"]
layout_mode = 2
text = "Вертикальная синхронизация
"

[node name="BackButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.435294)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.451
anchor_top = 0.63
anchor_right = 0.508
anchor_bottom = 0.642
offset_left = 0.447937
offset_top = -8.24002
offset_right = -57.216
offset_bottom = -8.01602
theme = ExtResource("1_y4bkg")
text = "Назад
"
metadata/_edit_use_anchors_ = true

[connection signal="toggled" from="ButtonContainer/FullScreenMode" to="." method="_on_full_screen_mode_toggled"]
[connection signal="toggled" from="ButtonContainer/VSyncMode" to="." method="_on_v_sync_mode_toggled"]
[connection signal="pressed" from="BackButton" to="." method="_on_button_pressed"]
